--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -5,6 +5,6 @@
 
 cacheUrl: https://t1ld3w4v3.github.io/osmo/cache.json
 sources:
-  #- href: https://invidious.namazso.eu/feed/channel/UC9uVcpm6-0w6Tp4F7Xm_R-Q
   - href: https://rss-bridge.org/bridge01/?action=display&amp;bridge=HeiseBridge&amp;category=https%3A%2F%2Fwww.heise.de%2Fnewsticker%2Fheise-atom.xml&amp;limit=25&amp;format=Atom
   - href: https://rss-bridge.org/bridge01/?action=display&amp;bridge=TelegramBridge&amp;username=%40LEGOangebote&amp;format=Atom
+  - href: https://invidious.namazso.eu/feed/channel/UC9uVcpm6-0w6Tp4F7Xm_R-Q
